@startuml

package com.god.entity {
    class Book {
        -String bookName
        -String press
        -String author
        -String ISBN
        -String type
        -String isSale
        -Double price
        -Double discount
        -Integer quantity
        -Integer bookId
        -java.sql.Date date

        +Book(String bookName, String press, String author, String ISBN, String type, String isSale, Double price, Double discount, Integer quantity, Integer bookId)
    }
}

package com.god.mapper {
    interface BookMapper {
        +Book getBookById(Integer bookId)
        +List<Book> getBookByName(String bookName)
        +void update(Book book)
        +void save(Book book)
        +List<Book> selectAll()
        +void buy(@Param("bookId") Integer bookId, @Param("quantity") Integer quantity)
    }
}

package com.god.service {
    class BookService {
        -BookMapper bookMapper

        +List<Book> getBookByName(String bookName)
        +Book getBookById(Integer bookId)
        +void update(Book book)
        +void save(Book book)
        +List<Book> selectAll()
        +void buy(Integer bookId, Integer quantity)
    }
}

BookMapper <|-- BookService
BookMapper ..> Book : uses

@enduml
